# rental-agent

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
agent/: agent.py
agent/tools/: approval_manager.py  message_drafter.py  rejection_logger.py
automation/: seloger_form.py
config/: criteria.txt  message_template.txt  message_template_example.txt  settings.py
infra/: locals.tf  main.tf  outputs.tf  run.tf  scheduler.tf  setup.sh  terraform.tfvars.example  variables.tf
scripts/: gmail_oauth.py
tests/: conftest.py  test_approval_manager.py  test_gmail_utils.py  test_message_drafter.py  test_rejection_logger.py
utils/: gmail.py  secrets.py
