[project]
name = "rental-agent"
version = "0.1.0"
description = "GCP-based rental listing screening agent using ADK and Gmail"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.45.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-storage>=2.17.0",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.130.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
